--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "File Explorer Note Count",
 	"version": "1.0.0",
 	"minAppVersion": "0.11.13",
-	"description": "You can see the number of notes under each folder within the file explorer.",
+	"description": "The plugin helps you to see the number of notes under each folder within the file explorer.",
 	"author": "Ozan Tellioglu",
 	"authorUrl": "https://www.ozan.pl",
 	"isDesktopOnly": false
