--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^14.14.37",
     "obsidian": "^0.12.0",
     "rollup": "^2.32.1",
+    "rollup-plugin-import-css": "^2.0.1",
     "tslib": "^2.2.0",
     "typescript": "^4.2.4"
   }
