build: add prettier

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "You can see the number of notes under each folder within the file explorer",
   "main": "main.js",
   "scripts": {
+    "prettier": "prettier --write 'src/**/*.+(ts|tsx|json|html|css)'",
     "dev": "rollup --config rollup.config.js -w",
     "build": "rollup --config rollup.config.js --environment BUILD:production"
   },
@@ -16,6 +17,7 @@
     "@rollup/plugin-typescript": "^8.2.1",
     "@types/node": "^14.14.37",
     "obsidian": "^0.12.0",
+    "prettier": "^2.3.0",
     "rollup": "^2.32.1",
     "rollup-plugin-import-css": "^2.0.1",
     "tslib": "^2.2.0",
