--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "dom",
       "es5",
       "scripthost",
-      "es2015"
+      "es2015",
+      "DOM.Iterable"
     ]
   },
   "include": [
