--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,20 @@
 {
-  "singleQuote": true,
-  "tabWidth": 2,
-  "trailingComma": "all",
-  "overrides": [
-    {
-      "files": ".prettierrc",
-      "options": {
-        "parser": "json"
-      }
-    },
-    {
-      "files": "*.yml",
-      "options": {
-        "tabWidth": 2,
-        "singleQuote": false
-      }
-    }
-  ]
+    "singleQuote": true,
+    "tabWidth": 4,
+    "trailingComma": "all",
+    "overrides": [
+        {
+            "files": ".prettierrc",
+            "options": {
+                "parser": "json"
+            }
+        },
+        {
+            "files": "*.yml",
+            "options": {
+                "tabWidth": 4,
+                "singleQuote": true
+            }
+        }
+    ]
 }
