build: add release-it and commitizen

--- a/package.json
+++ b/package.json
@@ -7,12 +7,15 @@
         "prettier": "prettier --write 'src/**/*.+(ts|tsx|json|html|css)'",
         "eslint": "eslint . --ext .ts,.tsx --fix",
         "dev": "rollup --config rollup.config.js -w",
+        "release": "release-it",
         "build": "rollup --config rollup.config.js --environment BUILD:production"
     },
     "keywords": [],
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@release-it/bumper": "^2.0.0",
+        "@release-it/conventional-changelog": "^2.0.1",
         "@rollup/plugin-commonjs": "^18.0.0",
         "@rollup/plugin-node-resolve": "^11.2.1",
         "@rollup/plugin-typescript": "^8.2.1",
@@ -20,6 +23,7 @@
         "@types/node": "^14.14.37",
         "@typescript-eslint/eslint-plugin": "^4.23.0",
         "@typescript-eslint/parser": "^4.23.0",
+        "cz-conventional-changelog": "^3.3.0",
         "eslint": "^7.26.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-import": "^2.22.1",
@@ -33,5 +37,50 @@
         "rollup-plugin-import-css": "^2.0.1",
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
-    }
+    },
+    "release-it": {
+        "hooks": {
+          "before:init": [
+            "npm run prettier",
+            "npm run eslint"
+          ],
+          "after:bump": [
+            "sh scripts/bump-version.sh",
+            "npm run build"
+          ],
+          "after:git:release": "echo After git push, before github release",
+          "after:release": "echo Successfully released ${name} v${version} to ${repo.repository}."
+        },
+        "git": {
+          "commitMessage": "chore: release v${version}",
+          "tagName": "${version}",
+          "tagAnnotation": "Release v${version}"
+        },
+        "npm": {
+          "publish": false
+        },
+        "github": {
+          "release": true,
+          "assets": [
+            "main.js",
+            "manifest.json",
+            "styles.css"
+          ],
+          "releaseName": "${version}"
+        },
+        "plugins": {
+          "@release-it/bumper": {
+            "out": "manifest.json"
+          },
+          "@release-it/conventional-changelog": {
+            "preset": "angular",
+            "infile": "CHANGELOG.md"
+          }
+        }
+      },
+      "config": {
+        "commitizen": {
+          "path": "./node_modules/cz-conventional-changelog"
+        }
+      }
 }
