--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "prettier": "^2.3.0",
         "rollup": "^2.32.1",
         "rollup-plugin-import-css": "^2.0.1",
+        "rollup-plugin-polyfill-node": "^0.6.2",
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
     },
