--- a/package.json
+++ b/package.json
@@ -65,9 +65,9 @@
         "github": {
             "release": true,
             "assets": [
-                "main.js",
-                "manifest.json",
-                "styles.css"
+                "build/main.js",
+                "build/manifest.json",
+                "build/styles.css"
             ],
             "releaseName": "${version}"
         },
