--- a/package.json
+++ b/package.json
@@ -32,10 +32,12 @@
         "eslint-plugin-prettier": "^3.4.0",
         "eslint-plugin-simple-import-sort": "^7.0.0",
         "json": "^11.0.0",
+        "monkey-around": "^2.2.0",
         "obsidian": "^0.12.0",
         "path-browserify": "^1.0.1",
         "prettier": "^2.3.0",
         "rollup": "^2.32.1",
+        "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-import-css": "^2.0.1",
         "tslib": "^2.2.0",
         "typescript": "^4.2.4"
