--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "author": "",
     "license": "MIT",
     "devDependencies": {
+        "@aidenlx/folder-note-core": "^1.2.2",
         "@release-it/bumper": "^2.0.0",
         "@release-it/conventional-changelog": "^2.0.1",
         "@rollup/plugin-commonjs": "^18.0.0",
